<resources>
    <string name="app_name">Projects</string>
    <string name="Loading">Loading</string>
    <string name="textProjectLoading">Wait Projects Loading ...</string>
    <string name="textTodosLoading">Wait Todos Loading ...</string>
    <string name="internetConnectionMessage">The Internet connection failed, Check the Internet</string>
    <string name="projectNonTodos">"The Project haven't any todos"</string>
    <string name="to_do">To Dos</string>
    <string name="error">"Error: "</string>
    <string name="todoNonChildTodos">"This todo haven't any child todos"</string>
    <string name="tab_text_1">Todos</string>
    <string name="tab_text_2">Info</string>
    <string name="todosName">"Name: "</string>
    <string name="startDateTodo">"Start Date: "</string>
    <string name="dueDateTodo">"Due Date: "</string>
    <string name="statusTodo">"Status: "</string>
    <string name="idTodo">Todo ID: </string>
    <string name="enter_the_id">Enter the ID</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_date">Enter the date</string>
    <string name="enter_the_status">Enter the status</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

</resources>