<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#81d4fa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_add_circle_24"
        app:subtitleTextAppearance="@style/TitleTextStyle"
        app:title="Add new task"
        app:titleTextColor="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/todo_id_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="Todo ID: "
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <EditText
                android:id="@+id/todo_id_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_todos_backgrounds"
                android:hint="@string/enter_the_id"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/todo_name_text_view" />

            <TextView
                android:id="@+id/todo_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="Todo Name: "
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todo_name_edit_text" />

            <EditText
                android:id="@+id/todo_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_todos_backgrounds"
                android:hint="@string/enter_the_name"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todo_id_text_view" />

            <TextView
                android:id="@+id/start_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="Start Date: "
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todo_id_edit_text" />

            <EditText
                android:id="@+id/start_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_todos_backgrounds"
                android:hint="@string/enter_the_date"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/start_date_text_view" />

            <TextView
                android:id="@+id/due_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="Due Date: "
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_date_edit_text" />

            <EditText
                android:id="@+id/due_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_todos_backgrounds"
                android:hint="@string/enter_the_date"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/due_date_text_view" />

            <TextView
                android:id="@+id/status_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="Status: "
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/due_date_edit_text" />

            <EditText
                android:id="@+id/status_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/info_todos_backgrounds"
                android:hint="@string/enter_the_status"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/status_text_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginRight="28dp"
                    android:text="@string/cancel"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/add_button"
                    app:layout_constraintEnd_toStartOf="@+id/add_button"
                    app:layout_constraintTop_toBottomOf="@id/status_edit_text" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/add"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>